--- a/build.xml
+++ b/build.xml
@@ -92,7 +92,11 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
-        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
+    	<replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01_E2.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
@@ -113,6 +117,7 @@
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
+        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"/>
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"/>
@@ -211,6 +216,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 
         <organize-schemas-macro wsdlname="VersionService" versiondate="2014_08_01"/>
 
@@ -269,6 +275,7 @@
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
+        <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
 
         <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
@@ -364,6 +371,7 @@
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -510,6 +518,7 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
 
                 <!--validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2013_06_01"/>
