FMK-3614 Flyt SetDoseDispensingOnHold til POR snitfladen

--- a/build.xml
+++ b/build.xml
@@ -128,6 +128,7 @@
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
+        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
 
         <copy todir="${idws.target.dir}">
             <fileset dir="${idws.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -206,6 +207,7 @@
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
 
         <organize-schemas-macro wsdlname="DumpRestore" versiondate="2013_01_01"/>
 
@@ -365,6 +367,7 @@
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -511,6 +514,7 @@
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01"/>
         <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01"/>
+		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01_E2"/>
 
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2012_06_01"/>
