FMK-3676 Etablering af 1.4.4.E2 snitflade

--- a/build.xml
+++ b/build.xml
@@ -92,6 +92,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_01_01_E2.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
     	<replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
@@ -116,6 +120,7 @@
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2013_06_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
+        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 
@@ -127,6 +132,7 @@
         <organize-idws-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
+        <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E2"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
         <organize-idws-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
 
@@ -206,6 +212,7 @@
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E1"/>
+        <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_01_01_E2"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="PatientRegistration" versiondate="2015_06_01_E2"/>
 
@@ -217,6 +224,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2013_06_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
 
@@ -276,6 +284,7 @@
         <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
+        <dist_zips-macro version-yymmdd="2015_01_01_E2" version="1.4.4.E2"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
 
@@ -366,6 +375,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/PatientOrganisationRelation-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/PatientRegistration-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2012_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -373,6 +383,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -513,6 +524,7 @@
 		<validatewsdl-macro wsdlfilename="PatientOrganisationRelation-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01"/>
         <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E1"/>
+        <validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_01_01_E2"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="PatientRegistration-inline_2015_06_01_E2"/>
 
@@ -521,6 +533,7 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E1"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
 
