--- a/ivy.xml
+++ b/ivy.xml
@@ -4,8 +4,9 @@
 	<configurations>
 		<conf name="build" />
 		<conf name="deploy" />
-		<conf name="jar" />
-		<conf name="adminjar" />
+		<conf name="jar"/>
+		<conf name="adminjar"/>
+		<conf name="testtooljar"/>
 		<conf name="src" />
 		<conf name="test" />
 	</configurations>
@@ -19,6 +20,8 @@
         <artifact name="fmk-schema-source" ext="zip" conf="src" />
 		<artifact name="fmk-schema-admin" ext="zip" />
 		<artifact name="fmk-schema-admin-classes" ext="jar" conf="adminjar" />
+		<artifact name="fmk-schema-testtool" ext="zip" />
+		<artifact name="fmk-schema-testtool-classes" ext="jar" conf="testtooljar" />
 	</publications>
 
 	<dependencies>
