Tilføjet skemaer og wsdl for 1.4.6.E3

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01_E3.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
     </target>
 
     <target name="filter-idws-xsds">
@@ -123,6 +127,7 @@
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
+        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
 
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"/>
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"/>
@@ -227,6 +232,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
 
         <organize-schemas-macro wsdlname="VersionService" versiondate="2014_08_01"/>
 
@@ -287,6 +293,7 @@
         <dist_zips-macro version-yymmdd="2015_01_01_E2" version="1.4.4.E2"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
+        <dist_zips-macro version-yymmdd="2015_06_01_E3" version="1.4.6.E3"/>
 
         <!-- Collection of all collections -->
         <zip destfile="${target.dir}/fmk-schema-dist.zip"
@@ -420,6 +427,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E3.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -570,6 +578,7 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E3"/>
 
                 <!--validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_Idws_2013_06_01"/>
