FMK-3939 Trukket EO services ud af Medicinkort 1.4.4E2 wsdl og ind i ny EO 1.4.4 E2 wsdl

--- a/build.xml
+++ b/build.xml
@@ -132,6 +132,7 @@
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"/>
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"/>
         <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
+        <organize-idws-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
 
         <organize-idws-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2012_06_01"/>
         <organize-idws-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
@@ -212,6 +213,7 @@
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2012_06_01"/>
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2013_06_01"/>
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
+        <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
 
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2012_06_01"/>
         <organize-schemas-macro wsdlname="PatientOrganisationRelation" versiondate="2013_06_01"/>
@@ -431,6 +433,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2012_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2013_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+    	<codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/VersionService-inline_2014_08_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
@@ -589,8 +592,10 @@
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2012_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2013_06_01"/>
 		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01"/>
+		<validatewsdl-macro wsdlfilename="EffectuationOrdering-inline_2015_01_01_E2"/>
 		
 		<validateidwswsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01"/>
+		<validateidwswsdl-macro wsdlfilename="EffectuationOrdering-inline_Idws_2015_01_01_E2"/>
 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
 		<validatewsdl-macro wsdlfilename="VersionService-inline_2014_08_01"/>
