Flyttet forkert placeret xslt fil

--- a/build.xml
+++ b/build.xml
@@ -610,6 +610,7 @@
 		<xslt in="${inlinefilename}" out="${inlinefilename}.html" style="src/dk/medicinkortet/xmlschema/fmkdoc.xsl"></xslt>	
 	</target>
 	
+	<!-- Fra https://github.com/antlibs/ant-http -->
 	 <taskdef name="http" classname="org.missinglink.ant.task.http.HttpClientTask">
 	    <classpath location="./ant-http-1.1.4.jar"/>
 	  </taskdef>
