FMK-4720 Oprettet xsd og wsdl for 1.4.4E4

--- a/build.xml
+++ b/build.xml
@@ -99,6 +99,10 @@
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
                 />
+        <replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_01_01_E4.wsdl"
+                 token="/${idws.schemas}/" value="/schemas/"
+                 description="Fix paths to referenced schemas"
+                />
     	<replace file="${idws.work.dir}/etc/wsdl/MedicineCard_Idws_2015_06_01.wsdl"
                  token="/${idws.schemas}/" value="/schemas/"
                  description="Fix paths to referenced schemas"
@@ -128,6 +132,7 @@
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
+        <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E4"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
         <organize-idws-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
@@ -233,6 +238,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E1"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E2"/>
+        <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_01_01_E4"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"/>
@@ -292,6 +298,7 @@
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E1" version="1.4.4.E1"/>
         <dist_zips-macro version-yymmdd="2015_01_01_E2" version="1.4.4.E2"/>
+        <dist_zips-macro version-yymmdd="2015_01_01_E4" version="1.4.4.E4"/>
         <dist_zips-macro version-yymmdd="2015_06_01" version="1.4.6"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E2" version="1.4.6.E2"/>
         <dist_zips-macro version-yymmdd="2015_06_01_E3" version="1.4.6.E3"/>
@@ -425,6 +432,7 @@
     	<codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E1.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_01_01_E4.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E2.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/MedicineCard-inline_2015_06_01_E3.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
@@ -575,6 +583,7 @@
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E1"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E2"/>
+		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_01_01_E4"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E2"/>
 		<validatewsdl-macro wsdlfilename="MedicineCard-inline_2015_06_01_E3"/>
